# fungame

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  console.h  docker_build.sh  draw.h  graphics.h  main.cpp  math.h  my_math.h  toolchain-mingw.cmake
source/: console.h  draw.h  geometry.h  main.cpp  my_math.h  snake.h
